1_nec_send done

--- a/1_nec_send/imported_project_report.html
+++ b/1_nec_send/imported_project_report.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <title>
-Project Import Report for nec_implementation</title>
+Project Import Report for 1_nec_send</title>
 </head>
 <body>
 <h1>
@@ -14,19 +14,19 @@ Project Import Summary</h1>
 <td style="border:1px solid">
 Import time</td>
 <td style="border:1px solid">
-2024. ápr. 25. 14:36:09</td>
+2024. ápr. 26. 15:24:27</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original location</td>
 <td style="border:1px solid">
-C:\Users\hegip\Desktop\Egyetem\6. felev\mikrovez\HegedusP.LanyiV.08\nec_implementation\.cproject</td>
+C:\Users\hegip\Desktop\Egyetem\6. felev\mikrovez\mikrovez_2_project\1_nec_send\.cproject</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original project name</td>
 <td style="border:1px solid">
-nec_implementation</td>
+1_nec_send</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
